[package]
name = "litcovers-wasm"
version = "0.1.0"
authors = ["Kitasio <kit.plotits@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
rusttype = "0.9.2"
image = "0.24.4"
textwrap = { version = "0.16.0", features = ["smawk"] }
serde_json = "1"
unicode-segmentation = "1.10.0"
base64 = "0.21.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
